# keshibot

./: .gitignore  AGENTS.md  Dockerfile.python-port  PYTHON_PORT.md  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
bridge/: baileys-sidecar.js
eggs/: pterodactyl-python-port.json
src/: index.js
takeshi_bot/: __init__.py  bridge.py  config.py  context.py  database.py  doctor.py  dynamic_command.py  errors.py  loader.py  logger.py  main.py  message_handler.py  messages.py  participants.py  paths.py  stealth_payment.py
takeshi_bot/commands/: __init__.py  base.py  registry.py
takeshi_bot/commands/admin/: __init__.py  _restriction.py  abrir.py  add_auto_responder.py  agendar_mensagem.py  anti_audio.py  anti_document.py  anti_event.py  anti_image.py  anti_link.py  anti_lottier_sticker.py  anti_payment.py  anti_product.py  anti_status_grupo.py  anti_sticker.py  anti_video.py  auto_responder.py  auto_sticker.py  ban.py  block_wpp.py  delete.py  delete_auto_responder.py  exit.py  mute.py  (+17 more)
takeshi_bot/middlewares/: __init__.py  permissions.py
takeshi_bot/services/: __init__.py  ffmpeg.py  linker.py  spider_x_api.py  sticker.py
takeshi_bot/utils/: __init__.py  group_status_message.py  payment_message.py  warn_system.py
tests_python/: __init__.py  test_admin_group_commands.py  test_bridge.py  test_database.py  test_doctor.py  test_dynamic_command.py  test_examples.py  test_ffmpeg_service.py  test_ia_sticker.py  test_moderation.py  test_registry.py  test_scheduled_message.py  test_sticker_contract.py  test_support_command.py  test_utils.py
(+110 files in other folders)
