[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "takeshi-bot-python"
version = "0.1.0"
description = "Python port of Takeshi Bot with a Baileys transport sidecar."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
  "openai>=1.0",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["takeshi_bot"]

[tool.pytest.ini_options]
testpaths = ["tests_python"]
